refactor: separated field business logic from reservation logic now reservationService takes care of reservation-related operations fieldSchedule also takes care of some logic that was previously in FieldService Made some functions that are used frequently